// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`commitPrice 1`] = `
Array [
  Array [
    Array [
      "1000000000000000000",
      2,
    ],
    "0x03ee06f40000000000000000000000000000000000000000000000000de0b6b3a76400000000000000000000000000000000000000000000000000000000000000000002",
    "address",
    "privateKey",
    3,
    4,
    -1,
  ],
]
`;

exports[`startMagi 1`] = `
Array [
  Array [
    Array [
      "1000000000000000000",
      2,
    ],
    "0x660d6eaf0000000000000000000000000000000000000000000000000de0b6b3a76400000000000000000000000000000000000000000000000000000000000000000002",
    "address",
    "privateKey",
    3,
    4,
    -1,
  ],
]
`;
